vlib/v/checker/tests/index_sumtype_interface_struct_params_err.vv
type Foo = int | map[int]int

interface Bar {}

struct Struct {}

fn sum_type_or_interface_as_parameters(mut foo Foo, mut bar Bar, mut st1 Struct, st2 &Struct, st3 Struct) {
	_ = foo[0]
	_ = bar[0]

	_ = st1[0]
	_ = st2[0]
	_ = st3[0]
}
